# zdb

./: .gitignore  BUILDING-WINDOWS.md  CLAUDE.md  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/workflows/: build.yml  windows.yml
crates/zdb-app/: Cargo.toml  build.rs
crates/zdb-app/resources/: zdb-icon.rc  zdb.manifest  zdb.rc
crates/zdb-app/src/: assets.rs  lsp.rs  main.rs  terminal.rs  workspace.rs
crates/zdb-app/src/workspace/: colors.rs  conn.rs  edit.rs  export.rs  grid.rs  mod.rs  query.rs  tabs.rs  test_support.rs  tree.rs  util.rs  view.rs
crates/zdb-config/: Cargo.toml
crates/zdb-config/src/: lib.rs  secret.rs
crates/zdb-db/: Cargo.toml
crates/zdb-db/src/: actor.rs  config.rs  edit.rs  error.rs  export.rs  introspect.rs  lib.rs  query.rs  tls.rs  types.rs
crates/zdb-db/tests/: connect.rs  describe.rs  edit.rs  introspect.rs
scripts/: build-sqls.sh  gen-icon.py  package-macos.sh  package-windows.sh
